[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/monochrome_transparent.png" type="Texture" id=1]
[ext_resource path="res://Entities/TopPlayer.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 11.4358, 10.483 )

[sub_resource type="Animation" id=2]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 402 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Swords:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Jump"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 405 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -2 ), Vector2( 0, -8 ), Vector2( 0, -16 ), Vector2( 0, -20 ), Vector2( 0, -6 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Swords:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -0.0992126, -2.18268 ), Vector2( -0.0793701, -2.14299 ), Vector2( -0.0595276, -2.20252 ), Vector2( -0.0396851, -2.16284 ), Vector2( -0.119055, -2.17276 ), Vector2( 0, -2.12132 ) ]
}

[sub_resource type="AnimationNodeAnimation" id=4]
animation = "Idle"

[sub_resource type="AnimationNodeAnimation" id=5]
animation = "Jump"

[sub_resource type="AnimationNodeStateMachineTransition" id=6]

[sub_resource type="AnimationNodeStateMachineTransition" id=7]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachine" id=8]
states/Idle/node = SubResource( 4 )
states/Idle/position = Vector2( 625.667, 160.333 )
states/Jump/node = SubResource( 5 )
states/Jump/position = Vector2( 788.333, 159.889 )
transitions = [ "Idle", "Jump", SubResource( 6 ), "Jump", "Idle", SubResource( 7 ) ]
start_node = "Idle"
graph_offset = Vector2( 106, 10 )

[sub_resource type="AnimationNodeStateMachinePlayback" id=9]

[node name="TopPlayer" type="KinematicBody2D" groups=[
"Player",
]]
modulate = Color( 1, 1, 0, 1 )
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 2, 2 )
texture = ExtResource( 1 )
hframes = 48
vframes = 22
frame = 402
region_rect = Rect2( 306, 119, 16, 16 )

[node name="Swords" type="Node2D" parent="Sprite"]

[node name="SwordLeft" type="Sprite" parent="Sprite/Swords"]
position = Vector2( -8.6119, 3.70452 )
rotation = -2.09439
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 48
vframes = 22
frame = 464

[node name="SwordRight" type="Sprite" parent="Sprite/Swords"]
position = Vector2( 8.55187, 3.6053 )
rotation = 0.523599
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 48
vframes = 22
frame = 464

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0394897, 4.81934 )
shape = SubResource( 1 )

[node name="AttackCooldown" type="Timer" parent="."]
one_shot = true

[node name="InvincibleTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/Jump = SubResource( 3 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 8 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 9 )

[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
[connection signal="timeout" from="InvincibleTimer" to="." method="_on_InvincibleTimer_timeout"]
